# cardinal-rs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  README.rst  build.rs  clippy.toml  crowdin.yml  manage.py  pyproject.toml
.github/workflows/: automerge.yml  ci.yml  lint.yml  pypi.yml  release.yml
.tx/: config
benches/: main.rs
docs/: changelog.md  changelog.rst  conf.py  index.md  index.rst  requirements.txt
docs/_static/: basic.css
docs/_templates/: base.html
docs/cli/: coverage.md  coverage.rst  index.md  index.rst  indicators.rst  init.md  prepare.md  prepare.rst  settings.md
docs/cli/indicators/: index.md  index.rst
docs/cli/indicators/R/: 003.md  018.md  024.md  024.rst  025.md  025.rst  028.md  030.md  035.md  035.rst  036.md  036.rst  038.md  038.rst  044.md  048.md  055.md  058.md  index.md  index.rst
docs/contributing/: index.md  index.rst  indicators.md  translation.md
docs/contributing/indicators/: code.md  docs.md  index.md  setup.md  test.md
docs/contributing/indicators/templates/: md
docs/contributing/templates/: expected  md  rs
docs/examples/: coverage-bracket.jsonl  coverage-duplicate.jsonl  coverage.jsonl  prepare.jsonl  settings.ini
docs/examples/R/: 003.jsonl  018.jsonl  024.ini  024.jsonl  025.ini  025.jsonl  028.jsonl  030.ini  030.jsonl  035.ini  035.jsonl  036.jsonl  038.jsonl  044.jsonl  048.ini  048.jsonl  058.jsonl
docs/locale/es/LC_MESSAGES/: changelog.po  cli.po  contributing.po  index.po  topics.po
docs/locale/es/LC_MESSAGES/cli/: coverage.po  index.po  init.po  prepare.po
docs/locale/es/LC_MESSAGES/cli/indicators/: index.po
docs/locale/es/LC_MESSAGES/cli/indicators/R/: 003.po  018.po  023.po  024.po  025.po  028.po  030.po  035.po  036.po  038.po  048.po  058.po  index.po
docs/locale/es/LC_MESSAGES/contributing/: index.po  indicators.po  translation.po
docs/locale/es/LC_MESSAGES/contributing/indicators/: code.po  docs.po  index.po  setup.po  test.po
docs/locale/es/LC_MESSAGES/topics/: index.po  settings.po  workflow.po
docs/topics/: index.md  settings.md  workflow.md
python/ocdscardinal/: __init__.py
src/: lib.rs  main.rs  queue.rs
src/indicators/: mod.rs  nf024.rs  nf025.rs  nf035.rs  nf036.rs  nf038.rs  r003.rs  r018.rs  r024.rs  r025.rs  r028.rs  r030.rs  r035.rs  r036.rs  r038.rs  r044.rs  r048.rs  r055.rs  r058.rs  util.rs
src/standard/: mod.rs
tests/: test.rs  test_python.py
tests/fixtures/: array_array.expected  array_boolean.expected  blank_line.jsonl  invalid_array_quote_last.jsonl  invalid_brace_first.jsonl  invalid_brace_last.jsonl  mixed_array.expected  mixed_lines.expected  mixed_lines.jsonl  repeat_null_first.jsonl
tests/fixtures/coverage/: ambiguous_empty_key.expected  ambiguous_empty_key.jsonl  array_array.expected  array_boolean.expected  array_object.expected  array_object.jsonl  array_string.expected  base_object.expected  blank_space.jsonl  empty_key.expected  invalid_array_quote_first.jsonl  invalid_object_quote_first.jsonl  invalid_object_quote_last.expected  invalid_object_quote_last.jsonl  mixed_array.expected  mixed_array.jsonl  mixed_lines.expected  mixed_lines_array.expected  mixed_lines_array.jsonl  mixed_lines_base.expected  mixed_lines_object.expected  mixed_lines_object.jsonl  mixed_object.expected  mixed_object.jsonl  multiline.expected  multiline.jsonl
tests/fixtures/indicators/: R003-procurement_method_details-x-5-y-10.expected  R003-procurement_method_details-x-5-y-10.jsonl  R003-procurement_methods-open+selective.expected  R003-procurement_methods-open+selective.jsonl  R003-threshold-10.expected  R003-threshold-10.jsonl  R003.expected  R003.jsonl  R018.expected  R018.jsonl  R024.expected  R024.jsonl  R025.expected  R025.jsonl  R028.expected  R028.jsonl  R030.expected  R030.jsonl  R035.expected  R035.jsonl  R036.expected  R036.jsonl  R038-tenderer.expected  R038-tenderer.jsonl  R038.expected  R038.jsonl  R038_tenderer.expected  R044.expected  R044.jsonl  R048.expected  R048.jsonl  R058.expected  R058.jsonl  nf024.expected  nf024.jsonl  nf025.expected  nf025.jsonl  nf035.expected  nf035.jsonl  nf036.expected  (+5 more)
tests/fixtures/prepare/: amount.ini  amount.jsonl  amount.output  award_status_by_contract_status.ini  award_status_by_contract_status.jsonl  award_status_by_contract_status.output  codelists.ini  codelists.jsonl  codelists.output  defaults.ini  defaults.jsonl  defaults.output  id.jsonl  id.output  modifications_move_auctions.ini  modifications_move_auctions.jsonl  modifications_move_auctions.output  modifications_prefix_organization_id.ini  modifications_prefix_organization_id.jsonl  modifications_prefix_organization_id.output  modifications_split.ini  modifications_split_procurement_method_details.jsonl  modifications_split_procurement_method_details.output  organization_id.ini  organization_id.jsonl  organization_id.output
