[package]
name = "ocdscardinal"
version = "0.0.2"
authors = ["Open Contracting Partnership <data@open-contracting.org>"]
edition = "2021"
description = "Measure red flags and procurement indicators using OCDS data."
homepage = "http://github.com/open-contracting/cardinal-lib"
repository = "http://github.com/open-contracting/cardinal-lib"
license = "MIT"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["cli", "json"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
config = {version = "0.13", features = ["ini"] }
human-panic = "1.0"
jmespath = {version = "0.3", features = ["sync"] }
log = "0.4"
num_cpus = "1.0"
pretty_env_logger = "0.4"
rayon = "1.0"
serde = "1.0"
serde_json = "1.0"
statrs = "0.16"

[build-dependencies]
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.0"
predicates = "2.0"
rstest = "0.16"
tempfile = "3.0"
trycmd = "0.14"
