[package]
name = "ocdscardinal"
version = "0.0.4"
authors = ["Open Contracting Partnership <data@open-contracting.org>"]
edition = "2021"
description = "Measure red flags and procurement indicators using OCDS data."
homepage = "http://github.com/open-contracting/cardinal-rs"
repository = "http://github.com/open-contracting/cardinal-rs"
license = "MIT"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["cli", "json"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
config = {version = "0.13", features = ["ini"] }
csv = "1.0"
human-panic = "1.0"
indexmap = { version = "1.0", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
rayon = "1.0"
readonly = "0.2"
serde = { version ="1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_path_to_error = "0.1"
statrs = "0.16"

[build-dependencies]
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.0"
predicates = "2.0"
rstest = "0.16"
tempfile = "3.0"
trycmd = "0.14"
