[package]
name = "ocdscardinal"
version = "0.0.7"
authors = ["Open Contracting Partnership <data@open-contracting.org>"]
edition = "2021"
description = "Measure red flags and procurement indicators using OCDS data."
homepage = "https://github.com/open-contracting/cardinal-rs"
repository = "https://github.com/open-contracting/cardinal-rs"
license = "MIT"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["cli", "json"]

# https://pyo3.rs/v0.25.1/#using-rust-from-python
[lib]
name = "ocdscardinal"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
# https://github.com/mehcode/config-rs/issues/531
config = {version = "0.13", features = ["ini"], default-features = false }
csv = "1.0"
human-panic = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.12"
log = "0.4"
ordered-float = "4.0"
pretty_env_logger = "0.5"
pyo3 = { version = "0.25", features = ["extension-module"] }
rayon = "1.0"
readonly = "0.2"
serde = { version ="1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"] }
serde_path_to_error = "0.1"
statrs = "0.16"

[build-dependencies]
glob = "0.3"
itertools = "0.12"
pyo3-build-config = "0.25"

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", features = ["html_reports", "real_blackbox"] }
criterion-macro = "0.4"
ctor = "0.2"
pretty_assertions = "1.0"
predicates = "3.0"
rstest = "0.18"
tempfile = "3.0"
trycmd = { version = "0.14", features = ["color-auto", "diff"], default-features = false }
