[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ocdscardinal"
version = "0.0.7"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "Measure red flags and procurement indicators using OCDS data"
readme = "README.md"
license = {text = "MIT"}
urls = {Homepage = "https://github.com/open-contracting/cardinal-rs"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]

[tool.maturin]
python-source = "python"
module-name = "ocdscardinal"
